# polymarket-cli

./: .gitignore  LICENSE  README.md  build_backend.py  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
polymarket_cli/: api.py  cli.py  formatting.py
polymarket_clob_agent/: api.py  cli.py
skills/pmkt/: SKILL.md
skills/pmkt-agent/: SKILL.md
skills/polymarket-cli/: SKILL.md
tests/: test_api.py  test_cli.py
tests/fixtures/: book.json  last_trade_price.json  market_detail.json  market_search.json  midpoint.json  price_history.json  public_search.json  trades.json
