[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "polymarket-clob-agent"
version = "0.2.0"
description = "Production-oriented read-only CLI wrapper around Polymarket public Gamma + CLOB APIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
pmkt = "polymarket_clob_agent.cli:main"
