[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "polymarket-cli"
version = "0.2.0"
description = "Production-oriented read-only CLI wrapper around Polymarket public Gamma + CLOB APIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
polymarket-cli = "polymarket_cli.cli:main"

[tool.uv.build-backend]
module-name = "polymarket_cli"
module-root = ""
