[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "polymarket-cli"
version = "0.2.1"
description = "Production-oriented read-only CLI wrapper around Polymarket public Gamma + CLOB APIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ra1nty" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = ["certifi>=2024.0.0"]

[project.urls]
Homepage = "https://github.com/ra1nty/polymarket-cli"
Repository = "https://github.com/ra1nty/polymarket-cli"
Issues = "https://github.com/ra1nty/polymarket-cli/issues"

[project.scripts]
polymarket-cli = "polymarket_cli.cli:main"

[tool.uv.build-backend]
module-name = "polymarket_cli"
module-root = ""
